--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ packages = [{include = "tf_sha256"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+tensorflow = "2.16.1"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.4.2"
 
 [build-system]
 requires = ["poetry-core"]
